nueva imagen y cambios en index

--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
                 dolorem.</p>
         </section>
         <section>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempore quia tenetur expedita hic, odit,
-                ullam ducimus odio nesciunt fugit ipsa dolore labore impedit optio officia autem omnis ratione commodi!
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex rerum cum doloribus nulla enim suscipit,
-                corporis aliquam neque iure expedita numquam nihil reiciendis ab dolorum aliquid exercitationem tenetur
-                harum ut?</p>
+            <img src="./img/Rick_y_Morty_Serie_de_TV-586243734-large.jpg" alt="">
         </section>
     </main>
 
