sume gradientes y efectos

--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 </head>
 
 <body>
-    <header>
+    <header class="grandiente">
         <h1>Git Demo</h1>
     </header>
     <main>
         <section>
+            <h2>Texto</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam aperiam doloribus repellat. Itaque, quos
                 nulla. Sequi, sit odit placeat iste unde atque totam, amet hic distinctio quae omnis consequuntur
                 dolorem.</p>
         </section>
         <section>
+            <h2>Imagen</h2>
             <img src="./img/Rick_y_Morty_Serie_de_TV-586243734-large.jpg" alt="">
         </section>
     </main>
